# cnbitklook

./: .gitignore  Makefile.am  README  configure.ac
doc/examples/cnbiconfig/: Makefile.am  ccfgconfig_offline.cpp  ccfgconfig_online.cpp  cnbiconfig_offline.cpp  cnbiconfig_online.cpp  cnbitask.cpp  smarttype.cpp  xmlconfig.cpp  xmltype.cpp
doc/examples/cnbicore/: Makefile.am  ccclient.cpp  ccdoublebuffer.cpp  ccendpoint.cpp  ccfile.cpp  cclogentry.cpp  cclogger.cpp  ccmultithread.cpp  ccmutex.cpp  ccobject.cpp  ccpipeasreader.cpp  ccpipeaswriter.cpp  ccpipereader.cpp  ccpipeserver.cpp  ccpipesink.cpp  ccpipesource.cpp  ccpipewriter.cpp  ccprocess.cpp  ccptable.cpp  ccsemaphore.cpp  ccserver.cpp  ccservermulti.cpp  ccserversingle.cpp  ccstreamer.cpp  ccthread.cpp  ccthreadsafe.cpp  cctime.cpp  ccudplistener.cpp
libcnbiconfig/examples/: Makefile.am  cnbiconfig.cpp  cnbiconfig_offline.cpp  cnbiconfig_online.cpp  cnbitask.cpp  smarttype.cpp  xmlconfig.cpp
libcnbicore/examples/: Makefile.am  ccclient.cpp  ccdoublebuffer.cpp  ccendpoint.cpp  ccfile.cpp  cclogger.cpp  ccmutex.cpp  ccobject.cpp  ccpipereader.cpp  ccpipeserver.cpp  ccpipesink.cpp  ccpipesource.cpp  ccpipewriter.cpp  ccprocess.cpp  ccptable.cpp  ccsemaphore.cpp  ccservermulti.cpp  ccserversingle.cpp  ccstreamer.cpp  ccthread.cpp  ccthreadsafe.cpp  cctime.cpp
libcnbiloop/examples/: Makefile.am  clacqclient.cpp  clacqlang.cpp  clallclients.cpp  clloop.cpp  clnamesclient.cpp  clnameslang.cpp  clproclient.cpp  clproclient2.cpp  clprolang.cpp  cltobiic.cpp  cltobiid.cpp
libcnbiprotocol/: DEPENDENCIES  Makefile.am  cnbiprotocol.pc.in  configure.ac
libcnbiprotocol/doc/: doxygen.cfg
libcnbiprotocol/examples/: Makefile.am  cpaudio.cpp  cpplayer.cpp  cpprobability.cpp  cptrack.cpp  cptrials.cpp  cptriggerbeep.cpp  cptriggerfactory.cpp  cptriggerlpt.cpp
libtranspipe/examples/: Makefile.am  tp_namedreceiver.c  tp_namedsender.c
libtransport/examples/: Makefile.am  clientchar.c  clientvoid.c  multi.c  resolver.c  serverchar.c  servervoid.c
mex/matndf/: Makefile  Makefile.am  matndf_include.m  ndf_ack.m  ndf_checkloop.m  ndf_checknames.m  ndf_cl_close.m  ndf_cl_getconfig.m  ndf_config.m  ndf_include.m  ndf_jump.m  ndf_jump_update.m  ndf_loopconfig.m  ndf_loopdelete.m  ndf_loopnames.m  ndf_loopnew.m  ndf_mi.m  ndf_printexception.m  ndf_read_legacy.m  ndf_read_param.m  ndf_streamer.m  ndf_tobi.m  ndf_tobi_close.m  ndf_tobi_connectid.m  ndf_tobi_receiveid.m  ndf_tobi_sendc.m  ndf_tobi_sendd.m  ndf_toc.c
mex/mexcnbiloop/: Makefile  Makefile.am  cnbiloop.mw  example_xdf.m
mex/mextransport/: .gitignore  Makefile  Makefile.am  transport.mw  transport.mw.in
src/cnbiacq/: CaDevice.cpp  CaDevice.hpp  CaWriter.cpp  CaWriter.hpp  Makefile.am
src/cnbiconfig/: CCfgConfig.cpp  CCfgConfig.hpp  CCfgTask.cpp  CCfgTask.hpp  CCfgTaskset.cpp  CCfgTaskset.hpp  CCfgXMLConfig.cpp  Makefile.am  XMLDocument.cpp  XMLDocument.hpp  XMLType.cpp  XMLType.hpp  ccfg_cli.cpp  ccfg_getbool.cpp  ccfg_getfloat.cpp  ccfg_getint.cpp  ccfg_getstring.cpp  cnbiconfig.pc.in
src/cnbicore/: .gitignore  CcCallback.hpp  CcClient.cpp  CcClient.hpp  CcClientExt.cpp  CcClientExt.hpp  CcCore.cpp  CcCore.hpp  CcDoubleBuffer.cpp  CcEndpoint.cpp  CcEndpoint.hpp  CcException.hpp  CcFile.hpp  CcFlags.hpp  CcLog.hpp  CcLogEntry.hpp  CcLogger.cpp  CcNetworkTypes.hpp  CcPipe.cpp  CcPipe.hpp  CcPipeReader.cpp  CcPipeReader.hpp  CcPipeServer.cpp  CcPipeServer.hpp  CcPipeSource.cpp  CcPipeSource.hpp  CcPipeWriter.cpp  CcPipeWriter.hpp  CcProcess.cpp  CcProxy.hpp  CcServer.cpp  CcServer.hpp  CcServerEndpoint.cpp  CcServerMulti.cpp  CcServerSingle.cpp  CcServerSingle.hpp  CcSocket.cpp  CcSocket.hpp  CcSocketProxy.cpp  CcSocketProxy.hpp  (+4 more)
src/cnbiloop/: ClAcqAsServer.cpp  ClAcqAsServer.hpp  ClAcqClient.cpp  ClAcqClient.hpp  ClAcqLang.cpp  ClAcqLang.hpp  ClAcqServer.cpp  ClAcqServer.hpp  ClBusServer.cpp  ClBusServer.hpp  ClClient.cpp  ClClient.hpp  ClDevServer.cpp  ClDevServer.hpp  ClDevicesAsServer.cpp  ClDevicesAsServer.hpp  ClLanguage.hpp  ClLoop.cpp  ClLoop.hpp  ClLoopConfig.cpp  ClLoopConfig.hpp  ClLoopConfigSrv.cpp  ClLoopConfigSrv.hpp  ClMatlab.cpp  ClMatlab.hpp  ClNamesAsServer.cpp  ClNamesAsServer.hpp  ClNamesClient.cpp  ClNamesClient.hpp  ClNamesLang.cpp  ClNamesLang.hpp  ClNmsClient.cpp  ClNmsClient.hpp  ClNmsLang.cpp  ClNmsLang.hpp  ClNmsServer.cpp  ClNmsServer.hpp  ClProAsServer.cpp  ClProAsServer.hpp  ClProClient.cpp  (+39 more)
src/libcnbiacq/: CaDevice.cpp  CaDevice.hpp  CaWriter.cpp  CaWriter.hpp  Makefile.am
src/libcnbiconfig/: CCfgConfig.cpp  CCfgConfig.hpp  CCfgTask.cpp  CCfgTask.hpp  CCfgTaskset.cpp  CCfgTaskset.hpp  CCfgTypes.hpp  CCfgXMLConfig.cpp  CCfgXMLConfig.hpp  Makefile.am  XMLDocument.cpp  XMLException.cpp  XMLException.hpp  XMLTools.cpp  XMLTools.hpp  XMLType.cpp  ccfg_cli.cpp  ccfg_validate.cpp
src/libcnbiloop/: ClAcqAsServer.cpp  ClAcqAsServer.hpp  ClAcqClient.cpp  ClAcqClient.hpp  ClAcqLang.cpp  ClAcqLang.hpp  ClClient.cpp  ClClient.hpp  ClLanguage.cpp  ClLanguage.hpp  ClLoop.cpp  ClLoop.hpp  ClMatlab.cpp  ClMatlab.hpp  ClNamesAsServer.cpp  ClNamesAsServer.hpp  ClNamesClient.cpp  ClNamesClient.hpp  ClNamesLang.cpp  ClNamesLang.hpp  ClProAsServer.cpp  ClProAsServer.hpp  ClProClient.cpp  ClProClient.hpp  ClProLang.cpp  ClProLang.hpp  ClTobiIc.cpp  ClTobiIc.hpp  ClTobiId.cpp  ClTobiId.hpp  ClTobiIdAsServer.cpp  ClTobiIdAsServer.hpp  Makefile.am  cl_acquisition.cpp  cl_checkloop.cpp  cl_grpc  cl_monitor.cpp  cl_nameserver.cpp  cl_processing.cpp  cl_rpc.cpp  (+3 more)
src/libtransport/: Makefile.am  net.c  net.h  tcp.c  tr_names.c  tr_names.h  tr_net.c  tr_net.h  tr_tcp.c  tr_tcp.h  tr_tcpclient.c  tr_tcpmonitor.c  tr_tcpserver.c  tr_types.h  tr_udp.c  tr_udp.h  tr_udpclient.c  tr_udpmonitor.c  tr_udpserver.c  types.h  udp.h
src/ndf/: Makefile.am  ndf.pc.in  ndf_types.h
src/transpipe/: Makefile.am  tp_namedpipe.c  tp_namedpipe.h  transpipe.pc.in
src/transport/: Makefile.am  tr_names.c  tr_names.h  tr_net.c  tr_net.h  tr_tcp.c  tr_tcp.h  tr_tcpclient.c  tr_tcpmonitor.c  tr_tcpserver.c  tr_udp.c  tr_udp.h  tr_udpclient.c  tr_udpmonitor.c  tr_udpserver.c
(+401 files in other folders)
