EXTRA_DIST = autogen.sh

ACLOCAL_AMFLAGS=-I m4
SUBDIRS = src/ndf \
		  src/transport \
		  src/transpipe \
		  src/cnbicore \
		  src/cnbiacq \
		  src/cnbiconfig \
		  src/cnbiloop \
		  mex/\
		  mex/cnbitkmat\
		  mex/mtpath\
		  mex/matndf\
		  mex/mexcnbiconfig\
		  mex/mexcnbiloop\
		  mex/mextransport\
		  doc\
		  extra
